welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:30: error: not found: value c
  c=getCouleurSol()
  ^SlugSnail:35: error: not found: value c
    if (getCouleurSol()==c) {
                         ^